--- a/8 Week SQL Challenge/readme
+++ b/8 Week SQL Challenge/readme
@@ -1,2 +1,7 @@
 This repository contains the solution for the 8 case studies in #8WeekSQLChallenge!
-Thanks @DataWithDanny for the excellent SQL case studies! 👋🏻
+Thanks @DataWithDanny for the excellent SQL case studies!
+|   |   |   |   |   |
+|---|---|---|---|---|
+|   |   |   |   |   |
+|   |   |   |   |   |
+|   |   |   |   |   |
