--- a/8 Week SQL Challenge/readme
+++ b/8 Week SQL Challenge/readme
@@ -1,7 +1,13 @@
 This repository contains the solution for the 8 case studies in #8WeekSQLChallenge!
 Thanks @DataWithDanny for the excellent SQL case studies!
-|   |   |   |   |   |
-|---|---|---|---|---|
-|   |   |   |   |   |
-|   |   |   |   |   |
-|   |   |   |   |   |
+| Name                                       | Description                                                                                                                                                                                                                                                                                                                                                                                                                                        | Status               |
+|--------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------|
+| **[Case Study #1 - Danny's Diner](https://github.com/muryulia/8-Week-SQL-Challenge/tree/main/Case%20Study%20%231%20-%20Danny's%20Diner)**              | Danny’s Diner is in need of your assistance to help the restaurant stay afloat. Danny wants to use the data to answer a few simple questions about his customers, especially about their visiting patterns, how much money they’ve spent and also which menu items are their favourite. | Completed           |
+| **[Case Study #2 - Pizza Runner](https://github.com/muryulia/8-Week-SQL-Challenge/tree/main/Case%20Study%20%232%20-%20Pizza%20Runner)**               | Danny requires further assistance to clean his data and apply some basic calculations so he can better direct his runners and optimise Pizza Runner’s operations.                                                                                                                                                                                                                                                                                  | Completed           |
+| **[Case Study #3 - Foodie-Fi](https://github.com/muryulia/8-Week-SQL-Challenge/tree/main/Case%20Study%20%233%20-%20Foodie-Fi)**                  | This case study focuses on using subscription style digital data to answer important business questions.                                                                                                                                                                                                                                                                                                                                           | Completed           |
+| **[Case Study #4 - Data Bank](https://github.com/muryulia/8-Week-SQL-Challenge/blob/main/Case%20Study%20%234%20-%20Data%20Bank/Solution.md)**                  | Data Bank runs just like any other digital bank - but it isn’t only for banking activities, they also have the world’s most secure distributed data storage platform! The management team at Data Bank want to increase their total customer base - but also need some help tracking just how much data storage their customers will need.                                                                                                         | In Progress         |
+| **[Case Study #5 - Data Mart](https://github.com/muryulia/8-Week-SQL-Challenge/blob/main/Case%20Study%20%235%20-%20Data%20Mart/Solution.md)**                  | Data Mart is Danny’s latest venture and after running international operations for his online supermarket that specialises in fresh produce - Danny is asking for your support to analyse his sales performance.                                                                                                                                                                                                                                   | Completed Partially |
+| **[Case Study #6 - Clique Bait](https://github.com/muryulia/8-Week-SQL-Challenge/blob/main/Case%20Study%20%236%20-%20Clique%20Bait/Solution.md)**                | In this case study - you are required to support Danny’s vision and analyse his dataset and come up with creative solutions to calculate funnel fallout rates for the Clique Bait online store.                                                                                                                                                                                                                                                    | Completed           |
+| **[Case Study #5 - Data Mart](https://github.com/muryulia/8-Week-SQL-Challenge/blob/main/Case%20Study%20%235%20-%20Data%20Mart/Solution.md)**                  | Data Mart is Danny’s latest venture and after running international operations for his online supermarket that specialises in fresh produce - Danny is asking for your support to analyse his sales performance.                                                                                                                                                                                                                                   | Completed |
+| **[Case Study #6 - Clique Bait](https://github.com/muryulia/8-Week-SQL-Challenge/blob/main/Case%20Study%20%236%20-%20Clique%20Bait/Solution.md)**                | In this case study - you are required to support Danny’s vision and analyse his dataset and come up with creative solutions to calculate funnel fallout rates for the Clique Bait online store.                                                                                                                                                                                                                                                    | Completed Partially           |
+| **[Case Study #7 - Balanced Tree Clothing Co.](https://github.com/muryulia/8-Week-SQL-Challenge/blob/main/Case%20Study%20%237%20-%20Balanced%20Tree%20Clothing%20Co./Solution.md)** | Danny, the CEO of this trendy fashion company has asked you to assist the team’s merchandising teams analyse their sales performance and generate a basic financial report to share with the wider business.                                                                                                                                                                                                                                       | Completed Partially |
